1999-04-18  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/bucket_fill.c
	* app/clone.c
	* app/convolve.c
	* app/flip_tool.c
	* app/ink.c
	* app/paintbrush.c
	* app/transform_tool.c: remember all radio buttons in the
	ToolOptions structures. This enables arbitrary default values and
	gui feedback for the "toggle key" feature.

Sat Apr 17 11:15:35 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/text_tool_cmds.c: doh, decipoints not decipixels

Thu Apr 15 23:04:17 BST 1999 Andy Thomas <alt@gimp.org>

	Changed:-

	* app/color_picker.c

	Must account for layer offsets.

Thu Apr 15 14:41:01 PDT 1999 Manish Singh <yosh@gimp.org>

	* applied gimp-lecorfec-99041[02]-0, changes follow

	* plug-ins/FractalExplorer/Dialogs.h (make_color_map):
	replaced free with g_free to fix segfault.

	* plug-ins/Lighting/lighting_preview.c (compute_preview):
	allocate xpostab and ypostab only when needed (it could also be
	allocated on stack with a compilation-fixed size like MapObject).
	It avoids to lose some Kb on each preview :)
	Also reindented (unfortunate C-c C-q) some other lines.

	* plug-ins/Lighting/lighting_main.c (run):
	release allocated postabs.

	* plug-ins/Lighting/lighting_ui.c:
	callbacks now have only one argument because gck widget use
	gtk_signal_connect_object. Caused segfault for scale widget.

	* plug-ins/autocrop/autocrop.c (doit):
	return if image has only background (thus fixing a segfault).

	* plug-ins/emboss/emboss.c (pluginCore, emboss_do_preview):
	replaced malloc/free with g_malloc/g_free (unneeded, but
	shouldn't everyone use glib calls ? :)

	* plug-ins/flame/flame.c :
	replaced a segfaulting free, and several harmless malloc/free pairs.

	* plug-ins/flame/megawidget.c (mw_preview_build):
	replaced harmless malloc/free pair.
	Note : mwp->bits is malloc'ed but seems to be never freed.

	* plug-ins/fractaltrace/fractaltrace.c (pixels_free):
	replaced a bunch of segfaulting free.
	(pixels_get, dialog_show): replaced gtk_signal_connect_object